# myProject

./: CMakeLists.txt  main.py
Test/: CMakeLists.txt  channelnorm.cpp
Test/Support/ThreadPool/: CMakeLists.txt  ThreadPoolTest.cpp
include/Support/ThreadPool/: ThreadPool.h
learn/: CMakeLists.txt
learn/design-mode/: CMakeLists.txt  doc.html  singleton.cpp
learn/design-mode/include/: singleton.h
learn/design-mode/src/: main.cpp  singleton.cpp
lib/: CMakeLists.txt
lib/Support/ThreadPool/: CMakeLists.txt  ThreadPool.cpp
mlir/: CMakeLists.txt
mlir/IRVerify/: IRVerify.cpp
mlir/MemAlloc/: MemAlloc.cpp  RepOrder.cpp
mlir/NopTree/include/: NopTree.h
mlir/NopTree/src/: NopTree.cpp
mlir/auto-merge/include/MyProject/Passes/: AutoMerge.h  Passes.td
mlir/auto-merge/lib/Passes/: AutoMerge.cpp  SpaceInit.cpp
mlir/auto-merge/oplib/lib/: op_dma_load.c
mlir/channelnorm/: CMakeLists.txt  README.md  main.cpp  main.py
python/: seat.py
python/netron-mlir/: netron-mlir.py  test.json  test.mlir
tools/: CMakeLists.txt
tools/TensorNorm/: TensorNorm.cpp
tools/output-replacer/: CMakeLists.txt  OutputReplacer.cpp
tools/subgraph-extraction/: main.cpp
tools/txexec/: CMakeLists.txt  txexec.cpp  txexec.h
